--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <nav>
       <a href="index.html">Brown Bear</a>
     </nav>
-    <h1>The Brown Bear</h1>
+    <h1>The Meme</h1>
     <nav>
       <ul>
         <li><a href="#introduction">Introduction</a></li>
