--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <nav>
-      <a href="index.html">Brown Bear</a>
+      <a href="index.html">Memes</a>
     </nav>
     <h1>The Meme</h1>
     <nav>
@@ -27,7 +27,7 @@
         <li>Vines (extinct)</li>
       </ol>
       <h3>Features</h3>
-      <p>Memes are not always completely transparent. Some can be cryptic or predictive in nature. They have very large, pretentious overtones. Male memes bears are often 30% larger than female memes. They can range from 5 feet to 9 feet from head to toe.</p>
+      <p>Memes are not always completely transparent. Some can be cryptic or predictive in nature. They have very large, pretentious overtones. Male memes are often 30% larger than female memes. They can range from 5 feet to 9 feet from head to toe.</p>
     </div>
     <div id="habitat">
       <h2>Habitat</h2>
@@ -38,7 +38,7 @@
         <li>Canada</li>
       </ol>
       <h3>Countries with Small Meme Populations</h3>
-      <p>Some countries with smaller meme populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan. Some of these might are referred to as 'ShitHole' countries.</p>
+      <p>Some countries with smaller meme populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan. Some of these might be referred to as 'Shithole' countries.</p>
     </div>
     <div id="media">
       <h2>Media</h2>
